--- a/index.html
+++ b/index.html
@@ -14,138 +14,90 @@
       --major: #f44336;
       --text: #111;
     }
-    body {
-      margin: 0;
-      font-family: system-ui, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      padding: 2rem;
-    }
-    h1 {
-      margin-top: 0;
-      font-size: 2.2rem;
-    }
-    #timestamp {
-      margin-bottom: 1.5rem;
-      font-size: .9rem;
-      color: #555;
-    }
-    #grid {
-      display: grid;
-      gap: 1rem;
-      grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
-    }
-    .card {
-      background: #fff;
-      border-radius: var(--card-radius);
-      box-shadow: var(--shadow);
-      padding: 1rem 1.2rem;
-      text-decoration: none;
-      display: flex;
-      flex-direction: column;
-      gap: .35rem;
-      transition: transform .15s;
-    }
-    .card:hover { transform: translateY(-2px); }
-    .card.ok     { border-left: 8px solid var(--ok); }
-    .card.minor  { border-left: 8px solid var(--minor); }
-    .card.major  { border-left: 8px solid var(--major); }
-    .service-name { font-weight: 600; text-transform: capitalize; }
-    .status-row { display: flex; align-items: center; gap: .4rem; }
-    .icon { font-size: 1.1rem; }
-    .incident-title { font-size: .85rem; color: #333; line-height: 1.2; }
+    body {margin:0;font-family:system-ui,sans-serif;background:var(--bg);color:var(--text);padding:2rem;}
+    h1{margin-top:0;font-size:2.2rem;}
+    #timestamp{margin-bottom:1.5rem;font-size:.9rem;color:#555;}
+    #grid{display:grid;gap:1rem;grid-template-columns:repeat(auto-fill,minmax(210px,1fr));}
+    .card{background:#fff;border-radius:var(--card-radius);box-shadow:var(--shadow);padding:1rem 1.2rem;text-decoration:none;display:flex;flex-direction:column;gap:.35rem;transition:transform .15s;}
+    .card:hover{transform:translateY(-2px);}  
+    .card.ok{border-left:8px solid var(--ok);}  
+    .card.minor{border-left:8px solid var(--minor);}  
+    .card.major{border-left:8px solid var(--major);}  
+    .service-name{font-weight:600;text-transform:capitalize;}
+    .status-row{display:flex;align-items:center;gap:.4rem;}
+    .icon{font-size:1.1rem;}
+    .incident-title{font-size:.85rem;color:#333;line-height:1.2;}
   </style>
 </head>
 <body>
   <h1>Status en direct</h1>
   <div id="timestamp">Chargement…</div>
   <div id="grid"></div>
-
 <script>
-// =============== CONFIG ===============
-const pages = {
-  activecampaign: { api:'https://status.activecampaign.com/api/v2/status.json', link:'https://status.activecampaign.com' },
-  webinarjam    : { api:'https://status.webinarjam.com/api/v2/status.json',     link:'https://status.webinarjam.com' },
-  twilio        : { api:'https://status.twilio.com/api/v2/status.json',       link:'https://status.twilio.com' },
-  manychat      : { api:'https://status.manychat.com/api/v2/status.json',     link:'https://status.manychat.com' },
-  make          : { api:'https://status.make.com/api/v2/status.json',         link:'https://status.make.com' },
-  clickfunnels  : { api:'https://status.clickfunnels.com/api/v2/status.json', link:'https://status.clickfunnels.com' },
-  typeform      : { api:'https://status.typeform.com/api/v2/status.json',     link:'https://status.typeform.com' },
-  calendly      : { api:'https://www.calendlystatus.com/api/v2/status.json',  link:'https://www.calendlystatus.com' },
-  gworkspace    : { api:'https://www.google.com/appsstatus/dashboard/incidents.json', link:'https://www.google.com/appsstatus/dashboard' },
-  gcloud        : { api:'https://status.cloud.google.com/incidents.json',     link:'https://status.cloud.google.com' },
-  prestashop    : { api:'https://status.prestashop.com',                      link:'https://status.prestashop.com', ping:true }
+/* ===================== CONFIG ===================== */
+const pages={
+  activecampaign:{api:'https://status.activecampaign.com/api/v2/summary.json',link:'https://status.activecampaign.com'},
+  webinarjam    :{api:'https://status.webinarjam.com/api/v2/summary.json',link:'https://status.webinarjam.com'},
+  twilio        :{api:'https://status.twilio.com/api/v2/summary.json',link:'https://status.twilio.com'},
+  manychat      :{api:'https://status.manychat.com/api/v2/summary.json',link:'https://status.manychat.com'},
+  make          :{api:'https://status.make.com/api/v2/summary.json',link:'https://status.make.com'},
+  clickfunnels  :{api:'https://status.clickfunnels.com/api/v2/summary.json',link:'https://status.clickfunnels.com'},
+  typeform      :{api:'https://status.typeform.com/api/v2/summary.json',link:'https://status.typeform.com'},
+  calendly      :{api:'https://www.calendlystatus.com/api/v2/summary.json',link:'https://www.calendlystatus.com'},
+  gworkspace    :{api:'https://www.google.com/appsstatus/dashboard/incidents.json',link:'https://www.google.com/appsstatus/dashboard',cors:true},
+  gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true},
+  prestashop    :{api:'https://status.prestashop.com',link:'https://status.prestashop.com',ping:true}
 };
-const cors = url => `https://corsproxy.io/?${encodeURIComponent(url)}`;
-// ============= UTILS =============
-function mapStatus(ind) {
-  if(!ind || ind==='none')   return {cls:'ok',    label:'ok',    icon:'✅'};
-  if(ind==='minor')          return {cls:'minor', label:'incident', icon:'⚠️'};
-  if(['major','critical'].includes(ind)) return {cls:'major', label:'incident', icon:'❌'};
-  return {cls:'minor', label:ind, icon:'❓'};
+const cors=url=>`https://corsproxy.io/?${encodeURIComponent(url)}`;
+
+/* ===================== HELPERS ===================== */
+function normalize(ind){return (ind||'').toString().toLowerCase();}
+function mapStatus(ind){
+  const n=normalize(ind);
+  if(['none','ok','operational','nostatus'].includes(n)) return {cls:'ok',label:'ok',icon:'✅'};
+  if(['minor','maintenance','degraded_performance','partial_outage'].includes(n)) return {cls:'minor',label:'incident',icon:'⚠️'};
+  if(['major','critical','major_outage'].includes(n)) return {cls:'major',label:'incident',icon:'❌'};
+  return {cls:'minor',label:n||'unknown',icon:'❓'};
 }
-function timeAgo(d){
-  const diff=Math.floor((Date.now()-d)/1000);
-  if(diff<60) return `${diff}s`;
-  const m=Math.floor(diff/60);
-  if(m<60) return `${m} min`;
-  const h=Math.floor(m/60);
-  return `${h} h`;
-}
-// =============== STATE ===============
-let previous = {}; // service -> cls
-let firstRun = true;
-// ============== NOTIFS ==============
-function mayNotify(name, cls){
-  if(Notification.permission!=='granted') return;
-  if(firstRun) return; // éviter un spam au chargement
-  const before = previous[name];
-  if(before!==undefined && before!==cls && cls!=='ok'){
-    new Notification(`${name}: ${cls.toUpperCase()}`);
-  }
-}
-// =============== RENDER ===============
-async function fetchStatus(name, cfg){
+function timeAgo(ts){const diff=Math.floor((Date.now()-ts)/1000);if(diff<60)return`${diff}s`;const m=Math.floor(diff/60);if(m<60)return`${m} min`;const h=Math.floor(m/60);return`${h} h`;}
+
+/* ===================== NOTIFS ===================== */
+let prevStatus={};let firstRun=true;
+function tryNotify(name,cls){if(Notification.permission!=='granted'||firstRun)return;const before=prevStatus[name];if(before&&before!==cls&&cls!=='ok'){new Notification(`${name}: ${cls}`);}prevStatus[name]=cls;}
+
+/* ===================== FETCH ===================== */
+async function getStatus(name,cfg){
   try{
-    if(cfg.ping){
-      const r = await fetch(cors(cfg.api), {mode:'cors'});
-      return r.ok ? {indicator:'none'} : {indicator:'major'};
+    if(cfg.ping){const r=await fetch(cors(cfg.api));return r.ok?{indicator:'ok'}:{indicator:'major'};}
+    if(name==='gworkspace'||name==='gcloud'){
+      const arr=await fetch(cors(cfg.api)).then(r=>r.json());return {indicator:arr.length?'major':'ok'};
     }
-    // Google JSON renvoie un tableau d'incidents
-    if(name==='gworkspace' || name==='gcloud'){
-      const data = await fetch(cors(cfg.api)).then(r=>r.json());
-      return {indicator: data.length ? 'major':'none'};
-    }
-    const data = await fetch(cors(cfg.api)).then(r=>r.json());
-    return {indicator: data.status?.indicator || 'none', title: data?.status?.description||''};
-  }catch(e){
-    return {indicator:'major'}; // unreachable => treat as out
-  }
+    const data=await fetch(cfg.cors?cors(cfg.api):cfg.api).then(r=>r.json());
+    return {indicator:data.status?.indicator||'ok',title:data.status?.description||''};
+  }catch{ return {indicator:'major'}; }
 }
+
+/* ===================== RENDER ===================== */
+const grid=document.getElementById('grid');
 async function refresh(){
-  const grid=document.getElementById('grid');
   grid.innerHTML='';
-  for(const [name,cfg] of Object.entries(pages)){
-    const {indicator,title=''} = await fetchStatus(name,cfg);
-    const {cls,label,icon} = mapStatus(indicator);
-    mayNotify(name,cls);
-    previous[name]=cls;
+  for(const [name,cfg]of Object.entries(pages)){
+    const {indicator,title=''}=await getStatus(name,cfg);
+    const {cls,label,icon}=mapStatus(indicator);
+    tryNotify(name,cls);
     const html=`<a class="card ${cls}" href="${cfg.link}" target="_blank" rel="noopener">
-      <span class="service-name">${name}</span>
-      <div class="status-row"><span class="icon">${icon}</span>${label}</div>
-      ${title?`<div class="incident-title">${title}</div>`:''}
-    </a>`;
+                  <span class="service-name">${name}</span>
+                  <div class="status-row"><span class="icon">${icon}</span>${label}</div>
+                  ${title&&!['ok','operational','none'].includes(normalize(indicator))?`<div class="incident-title">${title}</div>`:''}
+                </a>`;
     grid.insertAdjacentHTML('beforeend',html);
   }
-  document.getElementById('timestamp').textContent = `Mis à jour il y a ${timeAgo(Date.now())}`;
+  document.getElementById('timestamp').textContent=`Mis à jour il y a ${timeAgo(Date.now())}`;
   firstRun=false;
 }
-// ============ INIT ============
-if(Notification.permission==='default'){
-  Notification.requestPermission();
-}
+if(Notification.permission==='default'){Notification.requestPermission();}
 refresh();
-setInterval(refresh, 60000); // 1 min
+setInterval(refresh,60000);
 </script>
 </body>
 </html>
