--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="timestamp">Chargement…</div>
 <div id="grid"></div>
 <script>
-/* === CONFIG === */
+/**************** CONFIG ****************/ 
 const pages={
   activecampaign:{api:'https://status.activecampaign.com/api/v2/summary.json',link:'https://status.activecampaign.com'},
   webinarjam    :{api:'https://status.webinarjam.com/api/v2/summary.json',link:'https://status.webinarjam.com'},
@@ -39,14 +39,13 @@ const pages={
   typeform      :{api:'https://status.typeform.com/api/v2/summary.json',link:'https://status.typeform.com'},
   calendly      :{api:'https://www.calendlystatus.com/api/v2/summary.json',link:'https://www.calendlystatus.com'},
   gworkspace    :{api:'https://www.google.com/appsstatus/dashboard/incidents.json',link:'https://www.google.com/appsstatus/dashboard',cors:true,google:true},
-  gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true},
-  prestashop    :{api:'https://status.prestashop.com',link:'https://status.prestashop.com',ping:true}
+  gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true}
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
 
-/* === HELPERS === */
+/*************** HELPERS ***************/
 const okWords=['none','ok','operational','nostatus'];
-const minorWords=['minor','maintenance','degraded_performance','partial_outage'];
+const minorWords=['minor','maintenance','degraded_performance','partial_outage','warning'];
 const majorWords=['major','critical','major_outage'];
 function normalize(x){return (x||'').toString().toLowerCase();}
 function map(ind){const n=normalize(ind);
@@ -56,30 +55,43 @@ function map(ind){const n=normalize(ind);
   return{cls:'minor',lab:n||'unknown',ico:'❓'};}
 function ago(t){const s=Math.floor((Date.now()-t)/1000);if(s<60)return s+'s';const m=Math.floor(s/60);if(m<60)return m+' min';return Math.floor(m/60)+' h';}
 
-/* === NOTIFY === */
+/*************** NOTIFY ***************/
 let prev={},first=true;
 function notify(name,cls){if(Notification.permission!=='granted'||first)return;const b=prev[name];if(b&&b!==cls&&cls!=='ok')new Notification(`${name}: ${cls}`);prev[name]=cls;}
 
-/* === FETCH === */
+/*************** FETCH ***************/
 async function get(name,cfg){
   try{
-    if(cfg.ping){const r=await fetch(cors(cfg.api));return r.ok?{ind:'ok'}:{ind:'major'};}
-    if(cfg.google){ // if 404 we assume ok (empty list) ; google returns 404 when no incidents
+    if(cfg.google){
       const r=await fetch(cors(cfg.api));
       if(r.status===404)return{ind:'ok'};
-      const arr=await r.json();return{ind:arr.length?'minor':'ok'};}
+      const arr=await r.json();return{ind:arr.length?'minor':'ok'};
+    }
     const data=await fetch(cfg.cors?cors(cfg.api):cfg.api).then(r=>r.json());
     let ind=data.status?.indicator||'ok';
+    let title=data.status?.description||'';
+
+    /* 1) Components check (Atlassian) */
     if(ind==='none'&&Array.isArray(data.components)){
       const bad=data.components.find(c=>minorWords.concat(majorWords).includes(normalize(c.status)));
-      if(bad)ind=minorWords.includes(normalize(bad.status))?'minor':'major';
+      if(bad){ind=minorWords.includes(normalize(bad.status))?'minor':'major';title=bad.name;}
     }
-    const title=data.incidents?.[0]?.name||data.status?.description||'';
+
+    /* 2) Active incidents (Statuspage/Instatus) */
+    if(Array.isArray(data.incidents)){
+      const active=data.incidents.find(i=>!['resolved','completed','closed'].includes(normalize(i.status||i.state)));
+      if(active){
+        const impact=normalize(active.impact||active.severity||'minor');
+        ind=majorWords.includes(impact)?'major':'minor';
+        title=active.name||title||active.title||'';
+      }
+    }
+
     return{ind,title};
-  }catch(e){return{ind:'major'};}
+  }catch(e){return{ind:'major',title:'API error'}};
 }
 
-/* === RENDER === */
+/*************** RENDER ***************/
 const grid=document.getElementById('grid');
 async function refresh(){
   grid.innerHTML='';
