--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ const pages={
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
 
 /******** HELPERS ********/
-const okWords=['none','ok','operational','nostatus'];
+const okWords=['none','ok','operational','nostatus','up'];
 const minorWords=['minor','maintenance','degraded_performance','partial_outage','warning','partial'];
 const majorWords=['major','critical','major_outage','majoroutage'];
 const closedWords=['resolved','completed','closed','fixed'];
