--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ const pages={
   typeform      :{api:'https://status.typeform.com/api/v2/summary.json',link:'https://status.typeform.com'},
   calendly      :{api:'https://www.calendlystatus.com/api/v2/summary.json',link:'https://www.calendlystatus.com'},
   gworkspace    :{api:'https://www.google.com/appsstatus/dashboard/incidents.json',link:'https://www.google.com/appsstatus/dashboard',cors:true,google:true},
-  gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true}
+  gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true},
+  webflow       :{ api: 'https://status.webflow.com/api/v2/summary.json',link: 'https://status.webflow.com' }
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
 
