--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@ const pages={
   calendly      :{api:'https://www.calendlystatus.com/api/v2/summary.json',link:'https://www.calendlystatus.com'},
   gworkspace    :{api:'https://www.google.com/appsstatus/dashboard/incidents.json',link:'https://www.google.com/appsstatus/dashboard',cors:true,google:true},
   gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true},
-  webflow       :{api:'https://status.webflow.com/api/v2/summary.json',link:'https://status.webflow.com'}
+  webflow       :{api:'https://status.webflow.com/api/v2/summary.json',link:'https://status.webflow.com'},
+  notion        :{api:'https://status.notion.so/api/v2/summary.json',link:'https://status.notion.so'},
+  gohighlevel   :{api: 'https://status.gohighlevel.com/api/v2/summary.json',link:'https://status.gohighlevel.com'}
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
 
