--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ const pages={
   gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true},
   webflow       :{api:'https://status.webflow.com/api/v2/summary.json',link:'https://status.webflow.com'},
   notion        :{api:'https://status.notion.so/api/v2/summary.json',link:'https://status.notion.so'},
-  gohighlevel   :{api:'https://status.gohighlevel.com/api/v2/summary.json',link:'https://status.gohighlevel.com'},
-  zapier        :{api:'https://status.zapier.com/api/v2/summary.json',link:'https://status.zapier.com',cors:true}
+  gohighlevel   :{api:'https://status.gohighlevel.com/api/v2/summary.json',link:'https://status.gohighlevel.com',cors:true},
+  zapier        :{api:'https://status.zapier.com/api/v2/summary.json',link:'https://status.zapier.com'}
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
 
