--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ const pages={
   webflow       :{api:'https://status.webflow.com/api/v2/summary.json',link:'https://status.webflow.com'},
   notion        :{api:'https://status.notion.so/api/v2/summary.json',link:'https://status.notion.so'},
   gohighlevel   :{api:'https://status.gohighlevel.com',link:'https://status.gohighlevel.com',ping:true},
+  gohighlevel2  :{api:'https://status.gohighlevel.com',link:'https://status.gohighlevel.com',ping:true},
   zapier        :{api:'https://status.zapier.com/api/v2/summary.json',link:'https://status.zapier.com'}
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
