--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ const pages={
   notion        :{api:'https://status.notion.so/api/v2/summary.json',link:'https://status.notion.so'},
   gohighlevel   :{api:'https://status.gohighlevel.com',link:'https://status.gohighlevel.com',ping:true},
   gohighlevel2  :{api:'https://status-board.maxime-294.workers.dev',link:'https://status.gohighlevel.com'},
+  gohighlevel3  :{api:'https://api.pulsetic.com/public/status/status.gohighlevel.com',link:'https://status.gohighlevel.com',pulsetic:true},
   zapier        :{api:'https://status.zapier.com/api/v2/summary.json',link:'https://status.zapier.com'}
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
@@ -60,6 +61,14 @@ let prev={},first=true;function notify(name,cls){if(Notification.permission!=='g
 
 /******** FETCH ********/
 async function get(name,cfg){try{
+
+  // 0. Pulsetic overall
+    if (cfg.pulsetic) {
+      const j = await fetch(cfg.api, { method: 'POST' }).then(r => r.json());
+      const map = { operational:'ok', degraded:'minor', outage:'major' };
+      return { ind: map[j.status] || 'minor',
+               title: j.status === 'operational' ? '' : (j.status || '') };
+    }
 
     if (cfg.ping) {
       const ok = await fetch(cfg.api, { mode: 'no-cors' })  // plus de corsproxy
