--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>SaaS Status Board</title>
+  
 <style>
-  :root{--card-radius:14px;--shadow:0 2px 6px #0002;--bg:#f4f4f6;--ok:#4caf50;--minor:#ff9800;--major:#f44336;--text:#111}
+  :root{--card-radius:14px;--shadow:0 2px 6px #0002;--bg:#f4f4f6;--ok:#4caf50;--minor:#ff9800;--major:#f44336;--loading:#9e9e9e;--text:#111}
   body{margin:0;font-family:system-ui,sans-serif;background:var(--bg);color:var(--text);padding:2rem}
   h1{margin-top:0;font-size:2.2rem}
   #timestamp{margin-bottom:1.5rem;font-size:.9rem;color:#555}
   #grid{display:grid;gap:1rem;grid-template-columns:repeat(auto-fill,minmax(210px,1fr))}
   .card{background:#fff;border-radius:var(--card-radius);box-shadow:var(--shadow);padding:1rem 1.2rem;text-decoration:none;display:flex;flex-direction:column;gap:.35rem;transition:transform .15s}
   .card:hover{transform:translateY(-2px)}
+  .card.loading{border-left:8px solid var(--loading)}
   .card.ok{border-left:8px solid var(--ok)}
   .card.minor{border-left:8px solid var(--minor)}
   .card.major{border-left:8px solid var(--major)}
@@ -21,6 +23,7 @@
   .icon{font-size:1.1rem}
   .incident-title{font-size:.85rem;color:#333;line-height:1.2}
 </style>
+  
 </head>
   
 <body>
